# arrival

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  gh-pages.yml
arrival-cli/: Cargo.toml  README.md
arrival-cli-return/: Cargo.toml  README.md
arrival-cli-return/src/: lib.rs
arrival-cli/src/: args.rs  cli.rs  commands.rs  main.rs
arrival-cli/src/configs/: mod.rs  sample.toml
arrival-cli/src/nodes/: child.rs  cli_return.rs  custom.rs  mod.rs  root.rs  string.rs
arrival-core/: Cargo.toml  README.md
arrival-core/src/: arg.rs  lib.rs  node.rs  node_result.rs  path.rs  prelude.rs  runtime.rs  target.rs
arrival-serde/: Cargo.toml  README.md
arrival-serde/src/: arg_serde.rs  lib.rs  node_serde.rs  path_serde.rs  prelude.rs  runtime_serde.rs  target_serde.rs
arrival-string/: Cargo.toml  README.md
arrival-string/src/: lib.rs
arrival-toml/: Cargo.toml  README.md
arrival-toml/src/: lib.rs
arrival-trace/: Cargo.toml  README.md
arrival-trace/src/: lib.rs  trace.rs
arrival-trace/src/segment/: mod.rs  string.rs
docs/: book.toml
docs/book/: 404.html  builtin-nodes.html  cli.html  configuration.html  core-concepts.html  getting-started.html  index.html  print.html  roadmap.html  searcher-09f2665d.js  searchindex-27e22d85.js  toc-a713ce94.js  toc.html
mdbook/: book.toml
mdbook/src/: SUMMARY.md  builtin-nodes.md  cli.md  configuration.md  core-concepts.md  core.md  getting-started.md  in-developing.md  introduction.md  roadmap.md  trace.md
