[workspace]
resolver = "3"
members = [
    "arrival-cli", "arrival-core",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["FleetingLore <macro__9@outlook.com>"]
description = "Some developing framework for Lore"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FleetingLore/arrival"
