[workspace]
resolver = "2"
members = [
    "arrival-cli",
    "arrival-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["FleetingLore <macro__9@outlook.com>"]
description = "Abstract layer communication framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FleetingLore/arrival"
