[workspace]
resolver = "3"
members = [
    "arrival-cli",
    "arrival-core",
    "arrival-serde",
    "arrival-toml",
    "arrival-trace",
    "arrival-string",
    "arrival-cli-return",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["FleetingLore <macro__9@outlook.com>"]
description = "Abstract layer communication framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FleetingLore/arrival"
