[package]
name = "arrival-cli-return"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrival-core = { path = "../arrival-core" }
clap = { version = "4", features = ["derive"] }
