[package]
name = "arrival-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrival-core = { path = "../arrival-core" }
arrival-string = { path = "../arrival-string" }
arrival-cli-return = { path = "../arrival-cli-return" }
arrival-toml = { path = "../arrival-toml" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
