[package]
name = "arrival-serde"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrival-core = { path = "../arrival-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
